# djaif

./: .gitignore  Makefile  README.md  manage.py  pyproject.toml  setup.cfg
djaif/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
djaif/book/: admin.py  apps.py  book_map.py  models.py  urls.py  views.py
djaif/book/migrations/: 0001_initial.py  0002_bookpage.py  0003_pagelink.py  0004_pagelink_name.py  0005_book_first_page.py  0006_book_cover_art.py  0007_auto_20200430_1629.py  0008_auto_20200430_1703.py  0009_bookpage_items.py  0010_pagelink_items.py  0011_auto_20200526_1529.py  0012_progresssave.py  0013_progresssave_updated_at.py  0014_droppeditem.py  0015_droppeditemsave.py  0016_note.py  0017_note_progress.py  0018_note_pinned.py
djaif/book/templates/: book.html  book_index.html  books.html  default.html  map.html  note.html  page.html  saves.html
djaif/book/templates/admin/: book_change_form.html
example/: db.sqlite3
static/: page.css  styles.css
