[tool.poetry]
name = "djaif"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
django = "^3.0.5"
Pillow = "^7.1.1"
graphviz = "^0.14"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.14.0"
jedi = "^0.17.0"
black = "^19.10b0"

[tool.black]
skip-string-normalization=true
line-length=80

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
