[tool.poetry]
name = "djaif"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.0.6"
Pillow = "^9.2.0"
graphviz = "^0.20"
django-extensions = "^3.2.0"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.14.0"
jedi = "^0.17.0"
black = "^19.10b0"
isort = "^4.3.21"

[tool.black]
skip-string-normalization=true
line-length=80

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
